# jeryu

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README-jankurai-scaffold.md  README.md  agent-index.json  agent-index.md  agent_bridge.md  check.json  deny.toml  jankurai_tracker.md  justfile  proof-lanes.toml  release.policy.toml  split_state.py  version.json
.agents/workflows/: jankurai-audit.md  jankurai-context-pack.md  jankurai-kickoff.md  jankurai-prove.md  jankurai-repair-plan.md  jankurai-witness.md
.autonomy/: autonomy.yml
.autonomy/agents/: judge.yml  lockfile-scout.yml  nightwatch.yml  reviewer-runtime.yml  reviewer-security.yml
.autonomy/policies/: approvals.yml  freeze.yml  protected-paths.yml  release.yml  risk.yml
.autonomy/prompts/: reviewer-nightwatch.md  reviewer-runtime.md  reviewer-test-integrity.md
.autonomy/providers/: llm.yml
.autonomy/schemas/: agent-approval-receipt.schema.json  capability-lease.schema.json  evidence-pack.schema.json  intent-card.schema.json  release-passport.schema.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_proposal.yml  bug_report.yml
.github/instructions/: jankurai-rust.instructions.md  jankurai-web.instructions.md
.github/workflows/: jankurai.yml  release-ready.yml  release.yml  rust.yml
.gitlab/issue_templates/: bug.md
.jeryu/autonomy/: autonomy.yml
aer-records/: mega-file-state.yaml
agent/: JANKURAI_STANDARD.md  audit-policy.toml  boundaries.toml  generated-zones.toml  guard-policy.toml  jankurai-install.toml  owner-map.json  proof-lanes.toml  repo-score.json  repo-score.md  score-history.csv  score-history.jsonl  standard-version.toml  test-map.json  tool-adoption.toml
apps/api/: AGENTS.md
apps/web/: AGENTS.md
contracts/: AGENTS.md
crates/adapters/: AGENTS.md
crates/adapters/cache-brain/: Cargo.toml
crates/adapters/cache-brain/src/: lib.rs
crates/application/: AGENTS.md
crates/domain/: AGENTS.md  Cargo.toml  README.md
crates/domain/src/: exceptions.rs  lib.rs
crates/jeryu-gcd/: Cargo.toml
crates/jeryu-gcd/src/: lib.rs  main.rs
crates/tui-capture/: Cargo.toml
crates/tui-capture/src/: support.rs  support_utils.rs
crates/tuiwright/: Cargo.toml
crates/workers/: AGENTS.md
db/: AGENTS.md  README.md  config.rs  state.rs  taint.rs
db/constraints/: 0001_inline_constraints.sql
db/migrations/: 0001_inline_schema.sql
docs/: API.md  ARCHITECTURE.md  INSTALL.md  JERYU_TUI.md  VTI.md  autonomous-delivery.md  autonomous-deployment.md  boundaries.md  ci-local.md  ci-testing.md  evidence-gate-spec.md  install.md  llm-reviewers.md  redline-jansu-issues.md  release-policy.md  release.md  testing.md
ops/: AGENTS.md
ops/ci/: jankurai-lane.sh  jeryu-gc.timer  jeryu-gcd.service  lib.sh  local_ci.sh  quality-gates.sh  release-lane.sh  release-ready-lane.sh  release-resolve.sh  rust-lane.sh  ssh_install_integration.sh
ops/git-hooks/: pre-push
ops/release/: semver-enforce.sh
paper/: IEEEtran.cls  api-appendix.tex  architecture-appendix.tex  main.tex  paper.md  references.bib  upgrade-plan-v2.0.1.md
paper/assets/: README.md
python/ai-service/: AGENTS.md  plot_jankurai_score_history.py
scripts/: ci-doctor.sh  ci-local.sh  ci-parity.sh  disk-pressure-cleanup.sh  install-jankurai.sh  install-redlinedb.sh  jankurai-manifest.json  local-live.sh  make-cockpit-theme-pr.sh  make-evidence-gate-pr.sh  pre-pr.sh  publish-pr.sh  redlinedb-manifest.json
src/: admission.rs  admission_tests.rs  agent.rs  agent_ops.rs  agent_runtime.rs  agent_surface.rs  agent_surface_index.rs  bootstrap.rs  cache.rs  cache_proxy.rs  cache_proxy_tests.rs  cache_reports.rs  cache_reports_scan.rs  capability.rs  capability_actions.rs  capability_execute.rs  capability_inspect.rs  cargo_cache.rs  cargo_cache_helpers.rs  cargo_cache_layout.rs  cargo_cache_tests.rs  cli.rs  cli_defs.rs  cli_defs_aux.rs  cli_runtime_commands.rs  cli_runtime_commands_ext.rs  cli_tests.rs  config.rs  config_paths.rs  config_support.rs  config_support_tests.rs  decision.rs  decision_gate.rs  dispatch.rs  dispatch_back.rs  dispatch_inspect.rs  docker.rs  docker_manager.rs  docker_manager_support.rs  docker_manager_tests.rs  (+61 more)
src/agent_review/: judge.rs  lockfile.rs  mod.rs  nightwatch.rs  orchestrator.rs  parse.rs  prompt_builder.rs  rejudge.rs  runner.rs  runtime.rs  security.rs  test_integrity.rs
src/api/: actions.rs  entity.rs  read_model.rs  snapshot.rs
src/approval/: mod.rs  quorum.rs  sha_bind.rs
src/autonomy/: auto_rejudge.rs  conditions.rs  daemon.rs  escalation.rs  escalation_loader.rs  evidence.rs  evidence_pack_builder.rs  freeze.rs  http_server.rs  kill_bell.rs  ledger.rs  mcp_tools.rs  metrics.rs  mod.rs  policy_yaml.rs  profile.rs  replay.rs  risk.rs  shadow.rs  signing.rs  types.rs  verdict_store.rs
src/bugtracker/: mod.rs  render.rs
src/cache/: mod.rs  runtime.rs  runtime_gc.rs  runtime_reports.rs  types.rs
src/commands/: agent_submit.rs  bug.rs  exec.rs  host.rs  install.rs  job.rs  mod.rs  pipeline.rs  pool.rs  release.rs  release_ops.rs  remote.rs  repo.rs  settings.rs  system.rs  test.rs  test_back.rs  test_back_choose.rs
src/db/: admission_repo.rs  autonomy_repo.rs  budget_repo.rs  bugtracker_repo.rs  mod.rs  release_repo.rs
src/exec/: mod.rs  stage.rs  stage_cache.rs
src/gateway/: npm.rs  oci.rs
src/git/: bridge.rs  invocation.rs  mirror.rs  policy.rs  snapshot.rs  store.rs  system.rs
src/git_host/: codeowners.rs  github.rs  gitlab_stub.rs  mod.rs  test_utils.rs
src/llm/: budget.rs  doctor.rs  mod.rs  openai_compatible.rs  provider_chains.rs  (+4 more)
tests/: autonomy_e2e.rs  autonomy_e2e_live.rs  cache_integration_test.rs  cli_smoke.rs  coverage_more.rs  e2e.rs  epoch_manager.rs  git_event_recording.rs  git_hooks.rs  git_host_github_live.rs  git_mirror.rs  git_passthrough.rs  jansu_consumer_resumes_after_restart.rs  jansu_three_topics_no_crosstalk.rs  jansu_webhook_jobs_roundtrip.rs  language_bad_behavior.rs  llm_doctor.rs  llm_smoke_openrouter.rs  reclaim_tests.rs  tui_recording.rs  tui_tuiwright.rs
tools/: security-lane.sh
(+310 files in other folders)
