[workspace]
members = [
    ".",
    "crates/cargo-witness",
    "crates/witness-rt",
    "crates/cargo-vrc",
    "crates/cargo-aer",
    "crates/arc-bench",
    "crates/tui-capture",
    "crates/adapters/cache-brain",
]
resolver = "2"

[workspace.package]
version = "3.0.1"
edition = "2024"
license = "MIT"
authors = []
rust-version = "1.85"

# Shared deps used by the proof-scoped control plane crates.
# jeryu uses its own explicit declarations below.
[workspace.dependencies]
anyhow = "1"
cargo_metadata = "0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
globset = "0"
libc = "0"
quote = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
sha2 = "0.11.0"
syn = { version = "2", features = ["full", "parsing", "visit"] }
tokio = { version = "1", features = ["full"] }
toml = "0"
walkdir = "2"

[workspace.metadata.agent]
validation_order = [
    "cargo check --workspace",
    "cargo nextest run -E 'package(<arc>)'",
    "cargo run -p cargo-witness -- build",
    "cargo run -p cargo-vrc -- map --output-dir .",
    "cargo run -p cargo-aer -- scan --output aer-findings.json",
]
ci_profiles = [
    { name = "inner-loop", commands = ["cargo check --workspace", "cargo nextest run -p jeryu --lib"] },
    { name = "pull-request", commands = ["cargo check --workspace", "cargo nextest run -p jeryu --lib", "cargo run -p cargo-witness -- build", "cargo run -p cargo-vrc -- map --output-dir .", "cargo run -p cargo-aer -- scan --output aer-findings.json"] },
    { name = "release-blocking", commands = ["cargo nextest run -p jeryu", "cargo deny check", "cargo run -p arc-bench -- run psd-mechanics"] },
    { name = "scheduled-hardening", commands = ["cargo semver-checks check-release", "cargo run -p cargo-aer -- scan --output aer-findings.json"] },
]

# -------------------------------------------------------------------
# jeryu package
# -------------------------------------------------------------------

[package]
name = "jeryu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web framework (webhook receiver + admin API)
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client (for GitLab API calls the gitlab crate doesn't cover)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Docker control
bollard = "0.18"

# SQLite state
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
toml = "0.8"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
base64 = "0.22"
dotenvy = "0.15"
dirs = "6"
futures-util = "0.3"
git2 = "0.20.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio-util = "0.7.18"
notify = "8.2.0"
urlencoding = "2.1.3"
ansi-to-tui = "8.0.1"
font8x8 = "0.3"
gif = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.11.0"
hex = "0.4.3"
httparse = "1.10.1"
dashmap = "6.1.0"
cargo_metadata = "0.23.1"
tempfile = "3.27.0"
libc = "0.2"
walkdir = "2"
witness-rt = { path = "crates/witness-rt" }
cache-brain-adapter = { path = "crates/adapters/cache-brain" }
async-trait = "0.1"

[dev-dependencies]

[package.metadata.agent]
purpose = "Single-binary CI/CD control plane for GitLab-based pipelines"
risk = "high"
owned_paths = [
    "src/**",
    "tests/**",
    "docs/**",
    "paper/**",
    "Cargo.toml",
    "Cargo.lock",
    "AGENTS.md",
    "proof-lanes.toml",
]
invariants = [
    "Errors use anyhow throughout",
    "State changes go through state::Db methods — never raw SQL in callers",
    "Security modules require security-relevant proof lane (see proof-lanes.toml)",
    "main.rs is CLI dispatcher only — no business logic",
]
local_validate = [
    "cargo check -p jeryu --message-format=json",
    "cargo nextest run -p jeryu --lib",
]
exceptions = [
    "mega-file.jeryu",
    "mega-function.jeryu",
]
ci_profiles = [
    { name = "inner-loop",       commands = ["cargo check -p jeryu --message-format=json", "cargo nextest run -p jeryu --lib"] },
    { name = "pull-request",     commands = ["cargo check -p jeryu --message-format=json", "cargo nextest run -p jeryu --lib", "cargo test -p jeryu --test '*' -- --test-threads=1"] },
    { name = "release-blocking", commands = ["cargo nextest run -p jeryu", "cargo deny check"] },
]
