[workspace]
members = [
    ".",
    "crates/cargo-witness",
    "crates/witness-rt",
    "crates/cargo-vrc",
    "crates/cargo-aer",
    "crates/arc-bench",
    "crates/tui-capture",
    "crates/adapters/cache-brain",
    "crates/jeryu-gcd",
]
resolver = "2"

[workspace.package]
version = "3.3.5"
edition = "2024"
license = "MIT"
authors = []
rust-version = "1.95"

# Shared deps used by the proof-scoped control plane crates.
# jeryu uses its own explicit declarations below.
[workspace.dependencies]
anyhow = "1"
cargo_metadata = "0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
globset = "0"
libc = "0"
quote = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
sha2 = "0.11.0"
syn = { version = "2", features = ["full", "parsing", "visit"] }
tokio = { version = "1", features = ["full"] }
toml = "0"
walkdir = "2"

[workspace.metadata.agent]
validation_order = [
    "cargo check --workspace",
    "cargo nextest run -E 'package(<arc>)'",
    "cargo run -p cargo-witness -- build",
    "cargo run -p cargo-vrc -- map --output-dir .",
    "cargo run -p cargo-aer -- scan --output aer-findings.json",
]
ci_profiles = [
    { name = "inner-loop", commands = ["cargo check --workspace", "cargo nextest run -p jeryu --lib"] },
    { name = "pull-request", commands = ["cargo check --workspace", "cargo nextest run -p jeryu --lib", "cargo run -p cargo-witness -- build", "cargo run -p cargo-vrc -- map --output-dir .", "cargo run -p cargo-aer -- scan --output aer-findings.json"] },
    { name = "release-blocking", commands = ["cargo nextest run -p jeryu", "cargo deny check", "cargo run -p arc-bench -- run psd-mechanics"] },
    { name = "scheduled-hardening", commands = ["cargo semver-checks check-release", "cargo run -p cargo-aer -- scan --output aer-findings.json"] },
]

# -------------------------------------------------------------------
# jeryu package
# -------------------------------------------------------------------

[package]
name = "jeryu"
version.workspace = true
edition.workspace = true
license.workspace = true
# Multiple binaries (jeryu + autonomy) means `cargo run -p jeryu` is ambiguous.
# Pick jeryu as the default so CI commands and `cargo run --` keep working.
default-run = "jeryu"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web framework (webhook receiver + admin API)
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client (for GitLab API calls the gitlab crate doesn't cover)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Docker control
bollard = "0.18"

# SQLite/Postgres state. Migration to RedlineDB v1.0.1 is tracked in
# docs/redline-jansu-issues.md — RedlineDB is the canonical storage engine
# going forward, but two blockers defer the migration to a follow-up PR:
#   R-1: RedlineDB's sync API is not a sqlx drop-in; 19 call sites need a
#        spawn_blocking adapter or full async rewrite (~20+ hours).
#   R-2: RedlineDB requires rustc 1.95; jeryu currently builds on 1.92.
# Both are tracked in docs/redline-jansu-issues.md.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
toml = "0.8"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
base64 = "0.22"
dotenvy = "0.15"
dirs = "6"
futures-util = "0.3"
git2 = "0.20.4"
ratatui = "0.30.0"
crossterm = "0.29.0"
tokio-util = "0.7.18"
notify = "8.2.0"
urlencoding = "2.1.3"
ansi-to-tui = "8.0.1"
font8x8 = "0.3"
gif = "0.13"
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.11.0"
hex = "0.4.3"
regex = "1"
ed25519-dalek = "2"
httparse = "1.10.1"
dashmap = "6.1.0"
cargo_metadata = "0.23.1"
tempfile = "3.27.0"
libc = "0.2"
walkdir = "2"
witness-rt = { path = "crates/witness-rt" }
cache-brain-adapter = { path = "crates/adapters/cache-brain" }
async-trait = "0.1"

# Jansu — in-process embedded Kafka-like broker, used for webhook event
# dispatch. URL-pinned to the v0.6.1 feature branch tip including the J-4
# Consumer batch-tail redelivery fix (jansu PR #11 commit 9f61c0d). Switch
# to `tag = "v0.6.1"` once neverhuman/jansu cuts the release tag.
# Optional + default-on so downstream consumers can `--no-default-features`
# to drop the heavyweight jansu transitives (object_store, rama, etc.) if
# they don't need the webhook broker path.
jansu-embedded = { git = "https://github.com/neverhuman/jansu.git", rev = "9f61c0d", optional = true }
jansu-sans-io = { git = "https://github.com/neverhuman/jansu.git", rev = "9f61c0d", optional = true }
url = { version = "2", optional = true }

[features]
default = ["jansu-broker"]
# Route webhook events through an embedded Jansu broker (producer in the HTTP
# handler, consumer in the autonomy daemon). Adds the jansu-embedded transitive
# closure (~object_store, rama). Disable with `--no-default-features` for a
# leaner build that processes webhooks inline.
jansu-broker = ["dep:jansu-embedded", "dep:jansu-sans-io", "dep:url"]

[dev-dependencies]
# Tuiwright is NOT managed as a library in this repo. It MUST be pulled from
# the jankurai workspace at an explicit version tag — never a local path.
# Bump the `tag` to upgrade; Cargo.lock pins the exact commit.
tuiwright = { git = "https://github.com/neverhuman/jankurai.git", tag = "v1.4.1" }

[package.metadata.agent]
purpose = "Single-binary CI/CD control plane for GitLab-based pipelines"
risk = "high"
owned_paths = [
    "src/**",
    "tests/**",
    "docs/**",
    "paper/**",
    "Cargo.toml",
    "Cargo.lock",
    "AGENTS.md",
    "proof-lanes.toml",
]
invariants = [
    "Errors use anyhow throughout",
    "State changes go through state::Db methods — never raw SQL in callers",
    "Security modules require security-relevant proof lane (see proof-lanes.toml)",
    "main.rs is CLI dispatcher only — no business logic",
]
local_validate = [
    "cargo check -p jeryu --message-format=json",
    "cargo nextest run -p jeryu --lib",
]
exceptions = [
    "mega-file.jeryu",
    "mega-function.jeryu",
]
ci_profiles = [
    { name = "inner-loop",       commands = ["cargo check -p jeryu --message-format=json", "cargo nextest run -p jeryu --lib"] },
    { name = "pull-request",     commands = ["cargo check -p jeryu --message-format=json", "cargo nextest run -p jeryu --lib", "cargo test -p jeryu --test '*' -- --test-threads=1"] },
    { name = "release-blocking", commands = ["cargo nextest run -p jeryu", "cargo deny check"] },
]
