[package]
name = "tuiwright"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Playwright-style black-box testing framework for terminal user interfaces."
repository = "https://github.com/neverhuman/jankurai"
keywords = ["testing", "terminal", "tui", "playwright", "automation"]
categories = ["development-tools::testing"]

[package.metadata.agent]
purpose = "Playwright-style black-box testing framework for terminal UIs"
owned_paths = ["src/**", "tests/**", "AGENTS.md"]
entrypoints = ["TuiSession", "TuiwrightDemo"]
invariants = [
    "Captures are deterministic for a given input transcript",
    "ab_glyph (not rusttype) is the font backend — keeps cargo-deny clean",
]
local_validate = [
    "cargo check -p tuiwright",
    "cargo test -p tuiwright",
]
boundary_validate = []
public_api = false
risk = "low"
consumers = ["jeryu (dev-dep)"]
exceptions = []

[features]
default = []
web-gif = ["dep:gifski"]

[dependencies]
anyhow = "1"
ab_glyph = "0.2"
crossterm = "0.29"
gif = "0.13"
gifski = { version = "1.34", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
unicode-width = "0.2"
vt100 = "0.16"

[dev-dependencies]
tempfile = "3"
