[package]
name = "cache-brain-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.agent]
purpose = "Database-backed cache-brain adapter (sqlx persistence for CacheBrain decisions)"
owned_paths = ["src/**", "AGENTS.md"]
entrypoints = ["CacheBrainAdapter"]
invariants = [
    "Cache misses are recoverable without data loss",
    "Persistence layer never blocks the CacheBrain decision path",
]
local_validate = [
    "cargo check -p cache-brain-adapter",
    "cargo test -p cache-brain-adapter",
]
boundary_validate = []
public_api = false
risk = "low"
consumers = ["crates/adapters"]
exceptions = []

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
# RedlineDB is the only embedded state-store backend allowed. Keep this on the
# SQLx AnyPool compatibility surface only; never add SQLite features or
# sqlx-sqlite as a fallback.
sqlx = { version = "0.8", features = ["runtime-tokio", "any"] }

[dev-dependencies]
redlinedb-sqlx = { git = "https://github.com/neverhuman/RedlineDB.git", rev = "3e73556fe57c32800046082cba826f17b6751284" }
tokio = { workspace = true }
