[package]
name = "cache-brain-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.agent]
purpose = "Database-backed cache-brain adapter (sqlx persistence for CacheBrain decisions)"
owned_paths = ["src/**", "AGENTS.md"]
entrypoints = ["CacheBrainAdapter"]
invariants = [
    "Cache misses are recoverable without data loss",
    "Persistence layer never blocks the CacheBrain decision path",
]
local_validate = [
    "cargo check -p cache-brain-adapter",
    "cargo test -p cache-brain-adapter",
]
boundary_validate = []
public_api = false
risk = "low"
consumers = ["crates/adapters"]
exceptions = []

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
# The parent jeryu crate selects the concrete SQLx backend feature.
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio", "any"] }

[dev-dependencies]
redlinedb-sqlx = { git = "https://github.com/neverhuman/RedlineDB.git", rev = "828667b49fd3adee88c8bdd48681b38c57b95563" }
tempfile = "3.27.0"
tokio = { workspace = true }
